<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/white"
    android:gravity="center"
    android:padding="40dp"
    tools:context=".Main2Activity">

    <!-- App Icon -->
    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:padding="10dp"
        android:src="@drawable/ic_location"
        android:background="@drawable/filled_button"
        android:layout_gravity="center" />

<!--     Welcome Text -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/welcome"
        android:textSize="45sp"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_civic_issues"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:layout_marginBottom="80dp" />

<!--     Login Button -->
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:background="@drawable/filled_button"/>

<!--     Register Button -->
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/outline_button"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_marginTop="18dp" />
</LinearLayout>
