<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".LoginActivity">

    <!-- Title -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="45dp"
        android:layout_gravity="center"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="@color/textPrimary"/>

    <!-- Subtitle -->
    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Welcome back! Please login."
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/textSecondary"/>

    <!-- Email -->
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/email"
        android:padding="12dp"
        android:layout_marginTop="80dp"
        android:inputType="textEmailAddress"
        android:drawableEnd="@drawable/ic_email"
        android:drawablePadding="8dp"
        android:textSize="20sp"
        android:textColor="@color/textPrimary" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <!-- Password Field -->
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingEnd="48dp"
            android:drawablePadding="10dp"
            android:paddingStart="16dp"
            android:textSize="20sp"
            android:paddingLeft="16dp"
            android:textColor="@color/textPrimary"
            android:layout_centerVertical="true"/>

        <!-- Eye Icon -->
        <ImageView
            android:id="@+id/ivEyeIcon"
            android:layout_width="32dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_eye_closed"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="12dp"/>
    </RelativeLayout>


    <!-- Forgot Password -->
    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="18sp"
        android:textColor="@color/primaryVariant"
        android:layout_gravity="end"
        android:layout_marginTop="16dp"/>

    <!-- Login Button -->
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:layout_marginTop="90dp"
        android:background="@drawable/filled_button"/>

    <!-- Don't have account? Register -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don't have an account? "
            android:textSize="20sp"
            android:textColor="@color/textPrimary"/>

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="20sp"
            android:textColor="@color/primaryVariant"/>
    </LinearLayout>

</LinearLayout>
